# track_expenses

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_cli.py  run_gui.py
src/order_ocr/: __init__.py  app.py  cli.py  config.py  excel_store.py  ocr.py  parser.py  windows_ocr.ps1
tests/: test_app_callbacks.py  test_excel_store.py  test_ocr_scoring.py  test_parser.py
